# ai-agents

./: .gitignore  CLAUDE.md  Dockerfile  README.md  ai-agents.code-workspace  docker-compose.yml  pyproject.toml
1-lesson/: docker-compose.yml  main.py
10-lesson/: docker-compose.yml  grid_env.py  main.py  q_learning.py  utils.py
4-lesson/: 4-lesson.json  Dockerfile  docker-compose.yml
7-lesson/: docker-compose.yml  main.py
7-lesson/graphs/: __init__.py  route_tools.py  state.py
7-lesson/nodes/: __init__.py  chat_node.py  mcp_node.py
